WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276117
[Regression
280415@main
] Fix RemoteMediaPlayerManager::gpuProcessConnectionDidClose assertion
https://bugs.webkit.org/show_bug.cgi?id=276117
Summary
[Regression 280415@main] Fix RemoteMediaPlayerManager::gpuProcessConnectionDi...
youenn fablet
Reported
2024-07-02 02:40:07 PDT
<
rdar://130922121
>
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-07-02 07:32:11 PDT
Committed
280575@main
(397921da8b2e): <
https://commits.webkit.org/280575@main
> Reviewed commits have been landed. Closing PR #30383 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug