[Regression 280415@main] Fix RemoteMediaPlayerManager::gpuProcessConnectionDidClose assertion rdar://130922121 https://bugs.webkit.org/show_bug.cgi?id=276117

Reviewed by Eric Carlson.

We need to move the ASSERT out of the if statement since we are protecting the player in that if statement.

* Source/WebKit/WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::gpuProcessConnectionDidClose):

Canonical link: https://commits.webkit.org/280575@main